ECOSCOM-1890 - Fix mobile styles jumping

--- a/idocs-share/src/main/resources/META-INF/themes/citeckTheme/presentation.css
+++ b/idocs-share/src/main/resources/META-INF/themes/citeckTheme/presentation.css
@@ -4,7 +4,7 @@
 @import "/share/res/themes/citeckTheme/custom-mobile.css";
 
 /* hack to fix mobile styles jumping */
-.grid {
+.mobile .grid {
     visibility: hidden;
 }
 
